--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ title: Ujwal Iyer # the main title
 tagline: Learnings, Experiments & Notes" # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Learnings, Experiments & Notes.
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
