added goatcounter for page views.

--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,9 @@ analytics:
   google:
     id: # fill in your Google Analytics ID
   goatcounter:
-    id: # fill in your GoatCounter ID
+    # id: # fill in your GoatCounter ID
+    url: https://ujwal.goatcounter.com/count
+    pageviews: true
   umami:
     id: # fill in your Umami ID
     domain: # fill in your Umami domain
